# plotly_dash

./: README.md  app.py  pyproject.toml
callbacks_funcs/: all_callbacks_in_one.py  basic_callback.py  call_back _exercise.py  multi-input.py  radioitems.py  slider.py  state.py
exercise/: ex_1.py  multiple_scatter_plot.py  scatter_plot.py
